# hipfire

./: .gitignore  CHANGELOG.md  CLAUDE.md  Cargo.toml  NEXT-STEPS.md  README.md  results.tsv
.githooks/: pre-commit
bench/: compile_results.py  run_profile.sh
benchmarks/: redline_vs_hip.md
cli/: index.ts  registry.json
crates/engine/: Cargo.toml
crates/engine/examples/: a3b_smoke_forward.rs  bench.rs  bench_early_exit.rs  bench_hfq_family.rs  bench_qwen35_forward.rs  bench_qwen35_mq4.rs  daemon.rs  debug_forward.rs  debug_qwen3.rs  dflash_spec_demo.rs  encode_prompt.rs  greedy_dump.rs  infer.rs  infer_hfq.rs  infer_qwen35.rs  prefill_state_diff.rs  profile.rs  profile_attention_phases.rs  profile_layers.rs  profile_qwen35_mq4.rs  profile_turbo_attention.rs  run.rs  sweep_exit.rs  test_fused_rmsnorm_rotate_batched.rs  test_gemm_qkvza_batched_vs_scalar.rs  test_long_ctx.rs  triattn_accuracy_sweep.rs  triattn_infer.rs  triattn_longctx_demo.rs  triattn_periodic_demo.rs  triattn_validate.rs
crates/engine/src/: cask.rs  dflash.rs  hfq.rs  lib.rs  llama.rs  qwen35.rs  speculative.rs  tokenizer.rs  triattn.rs
docs/: ARCHITECTURE.md  BENCHMARKS.md  CLI.md  CONFIG.md  DFLASH_OVERNIGHT_AUTONOMY.md  GETTING_STARTED.md  HFQ_FAMILY.md  MODELS.md  MULTI_MODEL_QUEUE.md  QUANTIZATION.md  QUANTIZE.md  WEIGHT_REDUCTION_PLAN.md
scripts/: _detect-gpu.sh  adaptive_b_bench.sh  amd_quickdeploy.sh  bench-matrix.sh  bench_humaneval_dflash.py  coherence-gate-dflash.sh  compile-kernels.sh  ddtree_budget_sweep.sh  ddtree_verify_profile.sh  dflash_diag_iter1_tau.py  dflash_train_poc.py  (+13 more)
(+164 files in other folders)
